--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,46 @@
-.App {
-  text-align: center;
+.header-section {
+    height:60px;
+    padding-top:15px;
+}
+.background-blue {
+    background-color: #0078D7;
+}
+.filter-section {
+    height:60px;
+    padding:20px;
+}
+.list-section {
+    height:500px;
+    padding:20px;
+    overflow: auto;
+}
+.padding-right-5 {
+    padding-right:5px;
+}
+.selectedTab {
+    background: #fff;
+}
+.padding-20 {
+    padding: 20px;
+}
+.color-white {
+    color: #fff;
+}
+.text-right {
+    text-align: right;
+}
+.close-icon {
+    font-size: 0.7rem;
+    margin-top: 3px;
+}
+.location-icon {
+    font-size: 0.7rem;
+    margin-top: 3px;
+}
+.padding-left-10 {
+    padding-left:10px;
+}
+.padding-left-5 {
+    padding-left:5px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
